Añadiendo la posibilidad de que se pueda jugar contra la máquina

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <label for="dimension">De qué tamaño quieres el tablero</label>
       <input id="dimension" type="text" name="dimension">
       <button id="createTable">Crear tablero</button>
+      <label for="machine"><input type="checkbox" name="machine" id="machine"> Jugar contra la máquina</label>
     </div>
     <div class="inGame hide">
       <button id="resetGame">Reiniciar</button>
