--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div class="preGame">
+      <label for="rounds">Cuantas rondas quieres jugar?</label>
+      <input id="rounds" type="text" name="rounds">
       <label for="dimension">De qué tamaño quieres el tablero</label>
       <input id="dimension" type="text" name="dimension">
       <button id="createTable">Crear tablero</button>
@@ -19,6 +21,7 @@
     </div>
     <div id="marcador"></div>
     <div id="tablero"></div>
+    <div id="logs"></div>
     <div class="clearGame"><button class="clearGameButton">Volver a jugar</button></div>
     <script type="module" src="/main.js"></script>
   </body>
