Funcion rondas casi terminada (a falta de dar un ganador final)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Tres en Raya</title>
   </head>
   <body>
     <div class="preGame">
@@ -18,11 +18,12 @@
     <div class="inGame hide">
       <button id="resetGame">Reiniciar</button>
       <button class="clearGameButton">Limpiar Tablero</button>
+      <div id="infoRonda"></div>
     </div>
     <div id="marcador"></div>
     <div id="tablero"></div>
-    <div id="logs"></div>
     <div class="clearGame"><button class="clearGameButton">Volver a jugar</button></div>
+    <div id="logs"></div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
