--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tres en Raya</title>
+    <title>Super Tic Tac Toe</title>
   </head>
   <body>
+    <img id="logo" src="./img/logo.png" alt="">
     <div class="preGame">
-      <label for="rounds">Cuantas rondas quieres jugar?</label>
+      <label for="rounds">Rondas</label>
       <input id="rounds" type="text" name="rounds">
-      <label for="dimension">De qué tamaño quieres el tablero</label>
+      <label for="dimension">Tamaño del Tablero</label>
       <input id="dimension" type="text" name="dimension">
+      <label for="machine">VS CPU<input type="checkbox" name="machine" id="machine"></label>
       <button id="createTable">Crear tablero</button>
-      <label for="machine"><input type="checkbox" name="machine" id="machine"> Jugar contra la máquina</label>
     </div>
     <div class="inGame hide">
       <button id="resetGame">Reiniciar</button>
@@ -23,7 +24,7 @@
     <div id="marcador"></div>
     <div id="tablero"></div>
     <div class="clearGame"><button class="clearGameButton">Volver a jugar</button></div>
-    <div id="logs"></div>
+    <div id="logs" class="hide"></div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
